--- a/main.html
+++ b/main.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início de um sonho</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!-- adicionando menu navbar-->
+    <!-- navbar-->
     <nav class="navbar col-12 position-fixed navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="z-index: 999;">
       <div  class="container-fluid col-11 m-auto">
         <a class="navbar-brand fs-2" href="#">Líder Engenharia</a>
@@ -27,14 +29,17 @@
               <a class="nav-link active" aria-current="page" href="#quemSomos">Quem Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Contato</a>
+              <a class="nav-link active" aria-current="page" href="#FeedBacks">FeedBacks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#rodape">Contato</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     
-    <div class="" id="home">
+    <div id="home">
       <img src="/img/background.jpg" class="d-block w-100" alt="..." style="z-index: -1;">
 
       <!-- carrosel de imagens-->
@@ -78,89 +83,127 @@
       <div class="col">
         <div class="card">
           <img src="/img/card1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card3.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card3.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="/img/card3.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
         </div>
       </div>
     </div>
 
     <!--Feedbacks-->
+    <!-- título dos feedbacks-->
+    <br>
+    <hr>
+    <div id="FeedBacks" class="col-11 m-auto">
+      <h2 class="text-center">Feedbacks</h2>
+    
 
+    <!-- cards de feedback -->
+      <div class="row row-cols-1 row-cols-md-5 g-4 col-12 m-auto">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="/img/luffy.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Luffy</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Capitão</li>
+            </ul>
+          </div>
+        </div>
 
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="/img/zoro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Zoro</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Imediato</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="/img/sanji.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Sanji</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Cozinheiro</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="/img/nami.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nami</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Cartógrafa</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <video controls muted src="/videos/video-feedback.mp4" class="object-fit-contain"></video>
+            <div class="card-body">
+              <h5 class="card-title">Dionísio Outeda, gringo</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Radialista, Jornalista e Proprietario de Padaria</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Quem Somos-->
     <hr>
@@ -170,5 +213,74 @@
     </div>
     <hr>
 
+    <!-- Rodapé -->
+    <footer>
+      <div id="rodape">
+        <div id="footer_content">
+          <div id="footer_contacts">
+            <img src="/img/logo.jpg">
+            <p>Líder Engenharia</p>
+
+            <div id="footer_social_media">
+              <a id="instagram" href="#" class="footer-link">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+
+              <a id="whatsapp" href="#" class="footer-link">
+                <i class="fa-brands fa-whatsapp"></i>
+              </a>
+            </div>
+          </div>
+
+          <ul class="footer-list">
+            <li>
+              <h3>Blog</h3>
+            </li>
+            <li>
+              <a href="" class="footer-link">Tech</a>
+            </li>
+            <li>
+              <a href="" class="footer-link">Adventures</a>
+            </li>
+            <li>
+              <a href="" class="footer-link">Music</a>
+            </li>
+          </ul>
+
+          <ul class="footer-list">
+            <li>
+              <h3>Products</h3>
+            </li>
+            <li>
+              <a href="" class="footer-link">App</a>
+            </li>
+            <li>
+              <a href="" class="footer-link">Desktop</a>
+            </li>
+            <li>
+              <a href="" class="footer-link">Cloud</a>
+            </li>
+          </ul>
+
+          <div id="footer_subscribe">
+            <h3>Subscribe</h3>
+
+            <p>bla bla bla bla bla</p>
+
+            <div id="input_group">
+              <input type="email" id="email">
+              <button>
+                <i class="fa-regular fa-envelope"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div id="footer_copyright">
+          &#169
+          2023 all rigth reserved
+      </div>
+    </div>
+    </footer>
   </body>
 </html>
