--- a/main.html
+++ b/main.html
@@ -1,224 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Início de um sonho</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <!-- navbar-->
-    <nav class="navbar col-12 position-fixed navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="z-index: 999;">
-      <div  class="container-fluid col-11 m-auto">
-        <a class="navbar-brand fs-2" href="#">Líder Engenharia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#cards">Cards</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#quemSomos">Quem Somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#FeedBacks">FeedBacks</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#rodape">Contato</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    
-    <div id="home">
-      <img src="/img/background.jpg" class="d-block w-100" alt="..." style="z-index: -1;">
 
-      <!-- carrosel de imagens-->
-      <div id="carouselExampleIndicators" class="carousel slide coll-11 m-auto position-absolute top-50 start-50 translate-middle" style="z-index: 1; max-width: 700px;" >
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/img/image1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/img/image2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/img/image3.jpeg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Início de um sonho</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</head>
 
-    <!-- título dos cards-->
-    <br>
-    <hr>
-    <div class="col-11 m-auto">
-      <h2 class="text-center">Projetos</h2>
-    </div>
-
-    <!-- Cards -->
-    <div id="cards" class="row row-cols-1 row-cols-md-3 g-4 col-11 m-auto">
-      <div class="col">
-        <div class="card">
-          <img src="/img/card1.jpg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card3.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card1.jpg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card3.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card1.jpg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card2.jpeg" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/img/card3.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-    </div>
-
-    <!--Feedbacks-->
-    <!-- título dos feedbacks-->
-    <br>
-    <hr>
-    <div id="FeedBacks" class="col-11 m-auto">
-      <h2 class="text-center">Feedbacks</h2>
-    
-
-    <!-- cards de feedback -->
-      <div class="row row-cols-1 row-cols-md-5 g-4 col-12 m-auto">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="/img/luffy.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Luffy</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Capitão</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="/img/zoro.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Zoro</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Imediato</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="/img/sanji.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Sanji</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cozinheiro</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="/img/nami.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Nami</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cartógrafa</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <video controls muted src="/videos/video-feedback.mp4" class="object-fit-contain"></video>
-            <div class="card-body">
-              <h5 class="card-title">Dionísio Outeda, gringo</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Radialista, Jornalista e Proprietario de Padaria</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <!-- Quem Somos-->
-    <hr>
-    <div id="quemSomos" class="col-11 m-auto">
-      <h2 class="text-center">Quem Somos?</h2>
-      <p class="text-center">A Líder Engenharia é uma empresa dedicada a transformar sonhos em realidade através de reformas e construções de casas. Com mais de X anos no mercado, somos apaixonados por criar espaços incríveis que reflitam a visão e as necessidades de nossos clientes.</p>
-    </div>
-    <hr>
+<body>
+  <!-- navbar-->
 
     <!-- Rodapé -->
     <footer>
       <div id="rodape">
         <div id="footer_content">
           <div id="footer_contacts">
-            <img src="/img/logo.jpg">
+            <img src="/assets/logo.jpg">
             <p>Líder Engenharia</p>
 
             <div id="footer_social_media">
@@ -261,26 +67,14 @@
               <a href="" class="footer-link">Cloud</a>
             </li>
           </ul>
-
-          <div id="footer_subscribe">
-            <h3>Subscribe</h3>
-
-            <p>bla bla bla bla bla</p>
-
-            <div id="input_group">
-              <input type="email" id="email">
-              <button>
-                <i class="fa-regular fa-envelope"></i>
-              </button>
-            </div>
-          </div>
         </div>
-
         <div id="footer_copyright">
           &#169
           2023 all rigth reserved
+        </div>
+
       </div>
-    </div>
     </footer>
-  </body>
+</body>
+
 </html>
