--- a/main.html
+++ b/main.html
@@ -4,19 +4,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Início de um sonho</title>
+
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   
 </head>
 
 <body>
+  <!-- Header -->
+
+  <div class="bg-home">
+    <header>
+      <nav class="header-content container">
+        <div class="header-link">
+          <a href="#" class="link">Home</a>
+
+          <a href="#" class="link">Quem Somos</a>
+
+          <a href="#" class="link">Contato</a>
+        </div>
+
+        <div class="header-logo">
+          <img src="assets/logo.jpg" alt="Logo da Empresa">
+        </div>
+
+        <div class="header-button">
+          <a href="#">Agendar Horário</a>
+        </div>
+      </nav>
+    </header>
+  </div>
+  
     <!-- Rodapé -->
     <footer>
       <div id="rodape">
         <div id="footer_content">
           <div id="footer_contacts">
             <img src="/assets/logo.jpg">
-            <p>Líder Engenharia</p>
 
             <div id="footer_social_media">
               <a id="instagram" href="#" class="footer-link">
