--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+
 </head>
 
 <body>
@@ -33,13 +33,41 @@
         </div>
 
         <div class="header-button">
-          <a href="#">Agendar Horário</a>
+          <a href="#" class="link">Agendar Horário</a>
         </div>
       </nav>
+
+      <!-- Texto central -->
+      <main class="hero container">
+        <h1>TRANSFORME A SUA CASA DOS SONHOS EM REALIZADADE COM A LÍDER ENGENHARIA</h1>
+        <p>Horário de funcionamento: 08:00 às 19:00</p>
+        <a href="#" class="button-contact" target="_blank">
+          Agendar Consulta
+        </a>
+      </main>
     </header>
   </div>
-  
-    <!-- Rodapé -->
+
+  <!-- SOBRE NÓS -->
+
+  <section class="about">
+    <div class="container about-content">
+      <div>
+        <img src="assets/IMG_3601.webp" alt="Imagem do Engenheiro">
+      </div>
+
+      <div class="about-description">
+        <h2>SOBRE NÓS</h2>
+        <p>A Líder Engenharia é uma empresa dedicada a transformar sonhos em realidade através de reformas e
+          construções de casas. Com mais de X anos no mercado, somos apaixonados por criar espaços incríveis que
+          reflitam a visão e as necessidades de nossos clientes.</p>
+      </div>
+
+    </div>
+
+  </section>
+
+  <!-- Rodapé 
     <footer>
       <div id="rodape">
         <div id="footer_content">
@@ -93,7 +121,7 @@
         </div>
 
       </div>
-    </footer>
+    </footer>-->
 </body>
 
 </html>
