Criando seção de "projetos" e estilizando

--- a/main.html
+++ b/main.html
@@ -62,12 +62,50 @@
           construções de casas. Com mais de X anos no mercado, somos apaixonados por criar espaços incríveis que
           reflitam a visão e as necessidades de nossos clientes.</p>
       </div>
-
     </div>
-
   </section>
 
-  <!-- Rodapé 
+  <!-- PROJETOS -->
+  <section class="projetos">
+    <div class="projetos-content container">
+      <h1>PROJETOS</h1>
+      <p>Realizamos vários projetos até o atual momento, confira!</p>
+    </div>
+
+    <section class="construcoes">
+      <!-- contrução 1 -->
+      <div class="construcao">
+        <img src="assets/construcao 1.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <!-- contrução 2 -->
+      <div class="construcao">
+        <img src="assets/construcao 2.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <!-- contrução 3 -->
+      <div class="construcao">
+        <img src="assets/construcao 3.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <!-- Rodapé -->
     <footer>
       <div id="rodape">
         <div id="footer_content">
@@ -121,7 +159,7 @@
         </div>
 
       </div>
-    </footer>-->
+    </footer>
 </body>
 
 </html>
