--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    
 </head>
 
 <body>
@@ -105,61 +106,140 @@
     </section>
   </section>
 
-  <!-- Rodapé -->
-    <footer>
-      <div id="rodape">
-        <div id="footer_content">
-          <div id="footer_contacts">
-            <img src="/assets/logo.jpg">
+  <!-- FeedBack -->
 
-            <div id="footer_social_media">
-              <a id="instagram" href="#" class="footer-link">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
+  <section class="feedbacks">
+    <div class="feedback-content container">
+      <h1>FEEDBACKS</h1>
+      <p>Dionísio Outeda, radialista, jornalista...</p>
+    </div>
 
-              <a id="whatsapp" href="#" class="footer-link">
-                <i class="fa-brands fa-whatsapp"></i>
-              </a>
-            </div>
-          </div>
+    <section class="feedback">
+      <div class="feed">
+        <video src="assets/video-feedback.mp4" controls muted></video>
 
-          <ul class="footer-list">
-            <li>
-              <h3>Blog</h3>
-            </li>
-            <li>
-              <a href="" class="footer-link">Tech</a>
-            </li>
-            <li>
-              <a href="" class="footer-link">Adventures</a>
-            </li>
-            <li>
-              <a href="" class="footer-link">Music</a>
-            </li>
-          </ul>
-
-          <ul class="footer-list">
-            <li>
-              <h3>Products</h3>
-            </li>
-            <li>
-              <a href="" class="footer-link">App</a>
-            </li>
-            <li>
-              <a href="" class="footer-link">Desktop</a>
-            </li>
-            <li>
-              <a href="" class="footer-link">Cloud</a>
-            </li>
-          </ul>
+        <div class="feedback-info">
+          <strong>Ótimo resultado!</strong>
+          <button>01/01/2024</button>
         </div>
-        <div id="footer_copyright">
-          &#169
-          2023 all rigth reserved
-        </div>
-
       </div>
-    </footer>
+    </section>
+  </section>
+
+  <section class="feedback-imperatriz">
+    <div class="feedback-content container">
+      <h1>FEEDBACK DA CASA DE IMPERATRIZ</h1>
+    </div>
+
+    <section class="slider-description">
+      <!-- INICIO SLIDE -->
+      <section class="slider">
+        <div class="slides">
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+
+            <div class="slide first">
+              <img src="assets/slide1.jpg" alt="Imagem 1">
+            </div>
+            <div class="slide">
+              <img src="assets/slide2.jpg" alt="Imagem 2">
+            </div>
+            <div class="slide">
+              <img src="assets/slide3.jpg" alt="Imagem 3">
+            </div>
+
+            <div class="navigation-auto">
+              <div class="auto-btn1"></div>
+              <div class="auto-btn2"></div>
+              <div class="auto-btn3"></div>
+            </div>
+        </div>
+
+        <div class="manual-navigation">
+          <label for="radio1" class="manual-btn"></label>
+          <label for="radio2" class="manual-btn"></label>
+          <label for="radio3" class="manual-btn"></label>
+        </div>
+    </section>
+
+      <!-- FIM SLIDE -->
+      <section class="feedback-description">
+        <div class="feedback-content">
+          <p>Não temos dúvidas em recomendar a Líder engenharia, uma empresa de excelência!
+            Arthur e Bia são incríveis, atencioso, disponíveis, cordiais, responsáveis, profissionais muito competentes,
+            assertivos, confiáveis, que conduz a negociação com tranquilidade, através de uma conversa franca, clara e
+            honesta, que dar suporte em tudo que for preciso.
+            Essa compra foi uma caso de amor à primeira vista, tudo muito bem feito, padrão elevado, material de
+            qualidade, um aproveitamento de espaço sem igual. Nossa casa é linda, perfeita, estamos extremamente
+            satisfeitos, gratos a Deus por isso, pois nem nos nossos melhores sonhos imaginamos comprar uma casa, e uma
+            assim, que atendesse todas as nossas expectativas.
+            Temos um apreço, consideração e carinho muito grande por vocês, por todo desenrolar dessa história.
+            Obrigada pela dedicação em cada etapa, profetizamos vôos cada vez mais altos e prosperidade em Cristo. E com
+            toda certeza indico e volto a comprar sem preocupações.</p>
+        </div>
+      </section>
+    </section>
+  </section>
+
+
+  <!-- Rodapé -->
+  <footer>
+    <div id="rodape">
+      <div id="footer_content">
+        <div class="footer_contacts">
+          <img src="/assets/logo.jpg">
+
+          <div id="footer_social_media">
+            <a id="instagram" href="#" class="footer-link">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a id="whatsapp" href="#" class="footer-link">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+          </div>
+        </div>
+
+        <ul class="footer-list">
+          <li>
+            <h3>Blog</h3>
+          </li>
+          <li>
+            <a href="" class="footer-link">Tech</a>
+          </li>
+          <li>
+            <a href="" class="footer-link">Adventures</a>
+          </li>
+          <li>
+            <a href="" class="footer-link">Music</a>
+          </li>
+        </ul>
+
+        <ul class="footer-list">
+          <li>
+            <h3>Products</h3>
+          </li>
+          <li>
+            <a href="" class="footer-link">App</a>
+          </li>
+          <li>
+            <a href="" class="footer-link">Desktop</a>
+          </li>
+          <li>
+            <a href="" class="footer-link">Cloud</a>
+          </li>
+        </ul>
+      </div>
+      <div id="footer_copyright">
+        &#169
+        2023 all rigth reserved
+      </div>
+
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
