Adicionando imagens de fundo e gradientes

--- a/main.html
+++ b/main.html
@@ -73,6 +73,8 @@
       <p>Realizamos vários projetos até o atual momento, confira!</p>
     </div>
 
+    <br><br><br><br>
+
     <section class="construcoes">
       <!-- contrução 1 -->
       <div class="construcao">
@@ -97,6 +99,51 @@
       <!-- contrução 3 -->
       <div class="construcao">
         <img src="assets/construcao 3.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <div class="construcao">
+        <img src="assets/construcao 3.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <div class="construcao">
+        <img src="assets/construcao 3.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <div class="construcao">
+        <img src="assets/construcao 3.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <div class="construcao">
+        <img src="assets/construcao 2.png">
+
+        <div class="construcao-info">
+          <strong>Início da Construção tal</strong>
+          <button>01/01/2024</button>
+        </div>
+      </div>
+
+      <div class="construcao">
+        <img src="assets/construcao 1.png">
 
         <div class="construcao-info">
           <strong>Início da Construção tal</strong>
