Ajustando efeitos de gradient na página

--- a/main.html
+++ b/main.html
@@ -21,6 +21,10 @@
   <div class="bg-home">
     <header>
       <nav class="header-content container">
+        <div class="header-logo">
+          <img src="assets/logo.jpg" alt="Logo da Empresa">
+        </div>
+
         <div class="header-link">
           <a href="#" class="link">Home</a>
 
@@ -29,13 +33,9 @@
           <a href="#" class="link">Contato</a>
         </div>
 
-        <div class="header-logo">
-          <img src="assets/logo.jpg" alt="Logo da Empresa">
-        </div>
-
-        <div class="header-button">
+        <!--<div class="header-button">
           <a href="#" class="link">Agendar Horário</a>
-        </div>
+        </div>-->
       </nav>
 
       <!-- Texto central -->
@@ -227,8 +227,10 @@
         </div>
       </section>
     </section>
+    <br><br><br><br>
   </section>
 
+  
 
   <!-- Rodapé -->
   <footer>
